--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 	"dependencies": {
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.52.0",
+		"chart.js": "^4.5.0",
 		"sass": "^1.89.2"
 	}
 }
