moved reading to the frontend

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,17 @@
-VITE_PUBLIC_SUPABASE_URL=<SUBSTITUTE_SUPABASE_URL>
-VITE_PUBLIC_SUPABASE_ANON_KEY=<SUBSTITUTE_SUPABASE_ANON_KEY>
+# Copy this to .env and fill in your actual Supabase values
+
+# Required: Your Supabase project URL and anon key
+VITE_PUBLIC_SUPABASE_URL=https://your-project-id.supabase.co
+VITE_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Optional: Service role key for server-side operations (if needed)
+# SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# How to find these values:
+# 1. Go to your Supabase dashboard
+# 2. Select your project
+# 3. Go to Settings > API
+# 4. Copy:
+#    - Project URL → VITE_PUBLIC_SUPABASE_URL
+#    - Project API keys > anon/public → VITE_PUBLIC_SUPABASE_ANON_KEY
+#    - Project API keys > service_role → SUPABASE_SERVICE_ROLE_KEY (optional)
