--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -341,3 +341,14 @@ entrypoint = "./functions/update-single-video/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/update-single-video/*.html" ]
+
+[functions.insert_profile_on_user_create]
+enabled = true
+verify_jwt = true
+import_map = "./functions/insert_profile_on_user_create/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/insert_profile_on_user_create/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/insert_profile_on_user_create/*.html" ]
